some visual style modified

--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -10,17 +10,34 @@
 </head>
 
 <body>
+
+    <!-- Navbar --> 
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white" href="index.html">sebasCalvo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+          <a class="nav-link text-white" aria-current="page" href="#footer">Contact</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+        </div>
+      </nav>
+
+    <!-- Navbar --> 
+
+
     <!-- Presentation section --> 
     
     <header class="main-header">     
 		<div class= "background-overlay text-white py-5">
            <div class="container-fluid">
-               <div class="row"> 
+               <div class="row altoderow"> 
                    <div class="col-md-6 text-center justify-text-center align-self-center">
                        <h1>Sebastian Calvo</h1>
                        <h2>Software developer</h2>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-6 align-self-center">
                         <img src="images/selfieredonda.png" class="img-fluid d-none d-sm-block">
                      </div>
                 </div>
@@ -33,13 +50,13 @@
   
 <!-- PERSONAL SECTION --> 
 <!-- about section --> 
-<header class="about-me-header">
+<header class="containerstyle">
     <div class="about-me"> 
-        <div class= "background-overlay text-white py-5">
+        <div class= "text-white py-5">
             <div class="container-fluid">
                 <div class="row"> 
                     <div class="col-md-12 justify-text-center align-self-center">
-                        <h3>About me</h3>
+                        <h4>About me</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut harum doloremque quisquam enim ab veniam animi odit nemo consequuntur, nesciunt nulla nam totam esse maxime deleniti quas officia mollitia earum.</p>
                     </div>
             </div>
@@ -49,20 +66,20 @@
 <!-- end of about section -->
 
 <!-- experience section --> 
-<header class="experience-header">
+<header class="containerstyle">
     <div class="experience"> 
-        <div class= "background-overlay text-white py-5">
+        <div class= "text-white py-5">
             <div class="container-fluid">
                 <div class="row"> 
                     <div class="col-md-12 justify-text-center align-self-center">
-                        <h3>Experience</h3>
+                        <h4>Experience</h4>
                         <ul>
                             <li class="py-5">
-                                <h4>A job</h4>
+                                <h5>A job</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda maxime velit deserunt mollitia dicta a libero voluptate. Voluptate, maiores. Iure commodi vitae, officiis tenetur nulla quae qui reiciendis? Laborum.</p>
                             </li>
                             <li>
-                                <h4>Another job</h4>
+                                <h5>Another job</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque velit molestiae libero fuga, atque aut accusamus beatae vitae quam incidunt facilis sequi alias itaque et quod maiores! Harum, vitae. Veniam!</p>
                             </li>
                         </ul>
@@ -75,20 +92,20 @@
 <!-- end of experience section -->
 
 <!-- education section --> 
-<header class="education-header">
+<header class="containerstyle">
     <div class="education"> 
-        <div class= "background-overlay text-white py-5">
+        <div class= "text-white py-5">
             <div class="container-fluid">
                 <div class="row"> 
                     <div class="col-md-12 justify-text-center align-self-center">
-                        <h3>Education</h3>
+                        <h4>Education</h4>
                         <ul>
                             <li class="py-5">
-                                <h4>A study</h4>
+                                <h5>A study</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda maxime velit deserunt mollitia dicta a libero voluptate. Voluptate, maiores. Iure commodi vitae, officiis tenetur nulla quae qui reiciendis? Laborum.</p>
                             </li>
                             <li>
-                                <h4>Another study</h4>
+                                <h5>Another study</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque velit molestiae libero fuga, atque aut accusamus beatae vitae quam incidunt facilis sequi alias itaque et quod maiores! Harum, vitae. Veniam!</p>
                             </li>
                         </ul>    
@@ -100,20 +117,20 @@
 <!-- end of education section -->
 
 <!-- skills section --> 
-<header class="skills-header">
+<header class="containerstyle">
     <div class="skills"> 
-        <div class= "background-overlay text-white py-5">
+        <div class= "text-white py-5">
             <div class="container-fluid">
                 <div class="row"> 
                     <div class="col-md-12 justify-text-center align-self-center">
-                        <h3>Skills</h3>
+                        <h4>Skills</h4>
                         <ul>
                             <li class="py-5">
-                                <h4>A skill</h4>
+                                <h5>A skill</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda maxime velit deserunt mollitia dicta a libero voluptate. Voluptate, maiores. Iure commodi vitae, officiis tenetur nulla quae qui reiciendis? Laborum.</p>
                             </li>
                             <li>
-                                <h4>Another skill</h4>
+                                <h5>Another skill</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque velit molestiae libero fuga, atque aut accusamus beatae vitae quam incidunt facilis sequi alias itaque et quod maiores! Harum, vitae. Veniam!</p>
                             </li>
                         </ul>
@@ -125,7 +142,7 @@
 <!-- end of skills section -->
 <!-- end of PERSONAL SECTION -->      
 
-	<footer>
+	<footer id="footer">
 			<p>Este sito fue desarrollado por Sebastián Calvo</p>
             <p>Background image provided by <a href='https://www.freepik.es/vectores/protector-pantalla'>Vector de protector de pantalla creado por freepik - www.freepik.es</a>
             </p>
